--- a/index.html
+++ b/index.html
@@ -1,71 +1,399 @@
 <!DOCTYPE html>
 <html>
+	<body>
+	<title>Karten</title>
+	</body>
 <head>
-	<title>Meine PWA</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="manifest" href="/manifest.json">
+	<style>
+		.card {
+			font-size: 40px;
+			display: inline-block;
+		}
+		h2{
+			text-align: center;
+		}
+		#show_card{
+			text-align: center;
+			font-size: 60px;
+		}
+		#card-info{
+			text-align: center;
+		}
+		#btn_game{
+			text-align: center;
+		}
+		.button1{
+			display:inline-block;
+			padding:0.35em 1.2em;
+			border:0.1em solid #000000;
+			margin:0 0.3em 0.3em 0;
+			border-radius:0.12em;
+			box-sizing: border-box;
+			text-decoration:none;
+			font-family:'Roboto',sans-serif;
+			font-weight:300;
+			color:#000000;
+			text-align:center;
+			transition: all 0.2s;
+			}
+			.button1:hover{
+			 color:#000000;
+			 background-color:#00ff1e;
+			}
+			@media all and (max-width:30em){
+			 .button1{
+			 display:block;
+			 margin:0.4em auto;
+			}
+		} 
+		.button2{
+			display:inline-block;
+			padding:0.35em 1.2em;
+			border:0.1em solid #000000;
+			margin:0 0.3em 0.3em 0;
+			border-radius:0.12em;
+			box-sizing: border-box;
+			text-decoration:none;
+			font-family:'Roboto',sans-serif;
+			font-weight:300;
+			color:#000000;
+			text-align:center;
+			transition: all 0.2s;
+			}
+			.button2:hover{
+			 color:#000000;
+			 background-color:#ff0000;
+			}
+			@media all and (max-width:30em){
+			 .button2{
+			 display:block;
+			 margin:0.4em auto;
+			}
+		} 
+		
+		
+	</style>
 </head>
 <body>
-<script>
-// Ein Array mit den Übungen für jede "Farbe"
-const exercises = {
-  "Herz": "Liegestütze",
-  "Karo": "Sit-Ups",
-  "Pik": "Kniebeugen",
-  "Kreuz": "Burpees"
-};
+	<b id="timer">Time: 00:00:00</b>
+	<h2>Dein Deck:</h2>
 
-// Die Übung für die Joker
-const jokerExercise = "Plank";
+	<div id="deck">
+		<span class="card">&#x1F0A1;</span>
+		<span class="card">&#x1F0A2;</span>
+		<span class="card">&#x1F0A3;</span>
+		<span class="card">&#x1F0A4;</span>
+		<span class="card">&#x1F0A5;</span>
+		<span class="card">&#x1F0A6;</span>
+		<span class="card">&#x1F0A7;</span>
+		<span class="card">&#x1F0A8;</span>
+		<span class="card">&#x1F0A9;</span>
+		<span class="card">&#x1F0AA;</span>
+		<span class="card">&#x1F0AB;</span>
+		<span class="card">&#x1F0AC;</span>
+		<span class="card">&#x1F0AD;</span>
+        <span class="card">&#x1F0AE;</span>
 
-// Ein Array mit allen Karten im Deck
-const deck = [
-  "2-Herz", "3-Herz", "4-Herz", "5-Herz", "6-Herz", "7-Herz", "8-Herz", "9-Herz", "10-Herz", "Bube-Herz", "Dame-Herz", "König-Herz", "Ass-Herz",
-  "2-Karo", "3-Karo", "4-Karo", "5-Karo", "6-Karo", "7-Karo", "8-Karo", "9-Karo", "10-Karo", "Bube-Karo", "Dame-Karo", "König-Karo", "Ass-Karo",
-  "2-Pik", "3-Pik", "4-Pik", "5-Pik", "6-Pik", "7-Pik", "8-Pik", "9-Pik", "10-Pik", "Bube-Pik", "Dame-Pik", "König-Pik", "Ass-Pik",
-  "2-Kreuz", "3-Kreuz", "4-Kreuz", "5-Kreuz", "6-Kreuz", "7-Kreuz", "8-Kreuz", "9-Kreuz", "10-Kreuz", "Bube-Kreuz", "Dame-Kreuz", "König-Kreuz", "Ass-Kreuz",
-  "Joker", "Joker"
-];
+        <span class="card">&#x1F0B1;</span>
+		<span class="card">&#x1F0B2;</span>
+		<span class="card">&#x1F0B3;</span>
+		<span class="card">&#x1F0B4;</span>
+		<span class="card">&#x1F0B5;</span>
+		<span class="card">&#x1F0B6;</span>
+		<span class="card">&#x1F0B7;</span>
+		<span class="card">&#x1F0B8;</span>
+		<span class="card">&#x1F0B9;</span>
+		<span class="card">&#x1F0BA;</span>
+		<span class="card">&#x1F0BB;</span>
+		<span class="card">&#x1F0BC;</span>
+		<span class="card">&#x1F0BD;</span>
+        <span class="card">&#x1F0BE;</span>
 
-// Eine Funktion, die eine zufällige Karte aus dem Deck auswählt
-function drawCard() {
-  const randomIndex = Math.floor(Math.random() * deck.length);
-  return deck.splice(randomIndex, 1)[0];
-}
+        <span class="card">&#x1F0C1;</span>
+		<span class="card">&#x1F0C2;</span>
+		<span class="card">&#x1F0C3;</span>
+		<span class="card">&#x1F0C4;</span>
+		<span class="card">&#x1F0C5;</span>
+		<span class="card">&#x1F0C6;</span>
+		<span class="card">&#x1F0C7;</span>
+		<span class="card">&#x1F0C8;</span>
+		<span class="card">&#x1F0C9;</span>
+		<span class="card">&#x1F0CA;</span>
+		<span class="card">&#x1F0CB;</span>
+		<span class="card">&#x1F0CC;</span>
+		<span class="card">&#x1F0CD;</span>
+        <span class="card">&#x1F0CE;</span>
 
-// Eine Funktion, die die Übung für eine gegebene Karte zurückgibt
-function getExercise(card) {
-  if (card === "Joker") {
-    return jokerExercise;
-  } else {
-    const suit = card.split("-")[1];
-    return exercises[suit];
-  }
-}
+        <span class="card">&#x1F0D1;</span>
+		<span class="card">&#x1F0D2;</span>
+		<span class="card">&#x1F0D3;</span>
+		<span class="card">&#x1F0D4;</span>
+		<span class="card">&#x1F0D5;</span>
+		<span class="card">&#x1F0D6;</span>
+		<span class="card">&#x1F0D7;</span>
+		<span class="card">&#x1F0D8;</span>
+		<span class="card">&#x1F0D9;</span>
+		<span class="card">&#x1F0DA;</span>
+		<span class="card">&#x1F0DB;</span>
+		<span class="card">&#x1F0DC;</span>
+		<span class="card">&#x1F0DD;</span>
+        <span class="card">&#x1F0DE;</span>
 
-// Eine Funktion, die das Deck mischt und nacheinander Karten zieht
-function playGame() {
-  deck.sort(() => Math.random() - 0.5);
-  let card = drawCard();
-  while (deck.length > 0) {
-    console.log(`${card}: ${getExercise(card)}`);
-    card = drawCard();
-  }
-}
 
-// Das Spiel starten
-playGame();
-</script>
+
+	</div>
+
+</br>
+	<div id="btn_game">
+		<button onclick="revealCard()" class="button1">Ziehe eine Karte</button>
+		<button onclick="stopTimer()" class="button1">Pause</button>
+		<button onclick="startTimer()" class="button2">Pause ende</button>
+		<button onClick="window.location.reload();" class="button2">Nochmal spielen</button>
+	</div>
+	<p id="show_card"></p>
+	<p id="card-info"></p>
+
+
+
 	<script>
-		if ('serviceWorker' in navigator) {
-			window.addEventListener('load', function() {
-				navigator.serviceWorker.register('/sw.js').then(function(registration) {
-					console.log('ServiceWorker registration successful with scope: ', registration.scope);
-				}, function(err) {
-					console.log('ServiceWorker registration failed: ', err);
-				});
-			});
+		//timer
+
+		var seconds = 0;
+		var minutes = 0;
+		var hours = 0;
+
+		function updateTime() {
+		seconds++;
+		if (seconds == 60) {
+			seconds = 0;
+			minutes++;
 		}
+		if (minutes == 60) {
+			minutes = 0;
+			hours++;
+		}
+
+		var timeString = (hours ? (hours > 9 ? hours : "0" + hours) : "00") + ":" +
+			(minutes ? (minutes > 9 ? minutes : "0" + minutes) : "00") + ":" +
+			(seconds > 9 ? seconds : "0" + seconds);
+		document.getElementById("timer").innerHTML = "Time: "+timeString;
+		}
+		function startTimer() {
+  			timer = setInterval(updateTime, 1000);
+		}	
+		function stopTimer() {
+  			clearInterval(timer);
+		}
+		
+		startTimer();
+		// Shuffle the cards
+		function shuffleDeck() {
+			var deck = document.getElementById("deck");
+			for (var i = deck.children.length; i >= 0; i--) {
+				deck.appendChild(deck.children[Math.random() * i | 0]);
+			}
+		}
+
+		function revealCard() {
+			var cards = document.getElementsByClassName("card");
+			var numCards = cards.length;
+
+			if (numCards > 0) {
+				
+				var randomIndex = Math.floor(Math.random() * numCards);
+				var randomCard = cards[randomIndex];
+				var cardValue = randomCard.textContent;
+				var show_card = document.getElementById("show_card");
+				var cardInfo = document.getElementById("card-info");
+
+				show_card.textContent = cardValue;
+
+				//1
+				if (cardValue.includes("🂡")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 1 Liegestütz ";
+				}
+				if (cardValue.includes("🂢")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 2 Liegestütz ";
+				}
+				if (cardValue.includes("🂣")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 3 Liegestütz ";
+				}
+				if (cardValue.includes("🂤")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 4 Liegestütz ";
+				}
+				if (cardValue.includes("🂥")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 5 Liegestütz ";
+				}
+				if (cardValue.includes("🂦")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 6 Liegestütz ";
+				}
+				if (cardValue.includes("🂧")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 7 Liegestütz ";
+				}
+				if (cardValue.includes("🂨")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 8 Liegestütz ";
+				}
+				if (cardValue.includes("🂩")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 9 Liegestütz ";
+				}
+				if (cardValue.includes("🂪")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 10 Liegestütz ";
+				}
+				if (cardValue.includes("🂫")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 11 Liegestütz ";
+				}
+				if (cardValue.includes("🂬")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 12 Liegestütz ";
+				}
+				if (cardValue.includes("🂭")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 13 Liegestütz ";
+				}
+				if (cardValue.includes("🂮")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 14 Liegestütz ";
+				}
+
+				//2
+				if (cardValue.includes("🂱")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 1 Lunges";
+				}
+				if (cardValue.includes("🂲")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 2 Lunges ";
+				}
+				if (cardValue.includes("🂳")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 3 Lunges ";
+				}
+				if (cardValue.includes("🂴")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 4 Lunges ";
+				}
+				if (cardValue.includes("🂵")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 5 Lunges ";
+				}
+				if (cardValue.includes("🂶")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 6 Lunges ";
+				}
+				if (cardValue.includes("🂷")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 7 Lunges ";
+				}
+				if (cardValue.includes("🂸")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 8 Lunges ";
+				}
+				if (cardValue.includes("🂹")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 9 Lunges ";
+				}
+				if (cardValue.includes("🂺")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 10 Lunges ";
+				}
+				if (cardValue.includes("🂻")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 11 Lunges ";
+				}
+				if (cardValue.includes("🂼")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 12 Lunges ";
+				}
+				if (cardValue.includes("🂽")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 13 Lunges ";
+				}
+				if (cardValue.includes("🂾")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 14 Lunges ";
+				}
+
+				//3
+				if (cardValue.includes("🃁")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 1 Klimmzug ";
+				}
+				if (cardValue.includes("🃂")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 2 Klimmzug ";
+				}
+				if (cardValue.includes("🃃")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 3 Klimmzug ";
+				}
+				if (cardValue.includes("🃄")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 4 Klimmzug ";
+				}
+				if (cardValue.includes("🃅")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 5 Klimmzug ";
+				}
+				if (cardValue.includes("🃆")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 6 Klimmzug ";
+				}
+				if (cardValue.includes("🃇")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 7 Klimmzug ";
+				}
+				if (cardValue.includes("🃈")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 8 Klimmzug ";
+				}
+				if (cardValue.includes("🃉")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 9 Klimmzug ";
+				}
+				if (cardValue.includes("🃊")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 10 Klimmzug ";
+				}
+				if (cardValue.includes("🃋")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 11 Klimmzug ";
+				}
+				if (cardValue.includes("🃌")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 12 Klimmzug ";
+				}
+				if (cardValue.includes("🃍")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 13 Klimmzug ";
+				}
+				if (cardValue.includes("🃎")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 14 Klimmzug ";
+				}
+				
+				//4
+				if (cardValue.includes("🃑")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 1 Crunches ";
+				}
+				if (cardValue.includes("🃒")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 2 Crunches ";
+				}
+				if (cardValue.includes("🃓")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 3 Crunches ";
+				}
+				if (cardValue.includes("🃔")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 4 Crunches ";
+				}
+				if (cardValue.includes("🃕")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 5 Crunches ";
+				}
+				if (cardValue.includes("🃖")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 6 Crunches ";
+				}
+				if (cardValue.includes("🃗")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 7 Crunches ";
+				}
+				if (cardValue.includes("🃘")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 8 Crunches ";
+				}
+				if (cardValue.includes("🃙")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 9 Crunches ";
+				}
+				if (cardValue.includes("🃚")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 10 Crunches ";
+				}
+				if (cardValue.includes("🃛")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 11 Crunches ";
+				}
+				if (cardValue.includes("🃜")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 12 Crunches ";
+				}
+				if (cardValue.includes("🃝")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 13 Crunches ";
+				}
+				if (cardValue.includes("🃞")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 14 Crunches ";
+				}
+
+
+				randomCard.remove();
+			} else {
+				var cardInfo = document.getElementById("card-info");
+				cardInfo.textContent = "Das war es! Drück auf Nochmal spielen";
+				stopTimer()
+			}
+		}
+		// Call the shuffleDeck() function on page load
+		window.onload = shuffleDeck;
 	</script>
 </body>
-</html>
+</html>       
