--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
         <span class="card">&#x1F0DE;</span>
 
 
-
+		<span class="card">&#x1F0BF;</span>
+        <span class="card">&#x1F0DF;</span>
 	</div>
 
 </br>
@@ -393,6 +394,17 @@
 				}
 				if (cardValue.includes("🃞")){
 					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 14 Crunches ";
+				}
+
+				
+
+
+
+				if (cardValue.includes("🂿")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Mache 100m Lauf ";
+				}
+				if (cardValue.includes("🃟")){
+					cardInfo.textContent = "Du hast " + cardValue + " herausgezogen! "+"Springe 100 mal ";
 				}
 
 
